@@ -1,0 +1,12 @@
+#include <stdio.h>
+
+int main()
+{
+  int a;
+
+  printf("enter a number:");
+  scanf("%d", &a);
+  printf("Your number is : %d\n", a);
+
+  return 0;
+}
